<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
        
    <item 
        android:id="@+id/restart"
        android:title="@string/restart"
        android:icon="@drawable/ic_menu_rotate" />
    
    <item
    	android:id="@+id/shuffle"
    	android:title="@string/shuffle"
    	android:icon="@drawable/ic_menu_today" />

    <item 
        android:id="@+id/change_puzzle"
        android:title="@string/change_puzzle"
        android:icon="@drawable/ic_menu_gallery" />
    
    <item
        android:id="@+id/easy"
        android:title="@string/easy"
        android:icon="@drawable/easy" />

    <item
        android:id="@+id/medium"
        android:title="@string/medium"
        android:icon="@drawable/medium" />
    
    <item
        android:id="@+id/hard"
        android:title="@string/hard"
        android:icon="@drawable/hard" />
        "
</menu>